# OBS-captions-plugin

./: .gitmodules  CMakeLists.txt  README.md  azure-pipelines.yml
CI/: install-script-linux.sh  install-script-osx.sh  install-script-win.cmd  linux_build_obs.sh  osx_build_obs.sh  post-install-script-linux.sh  post-install-script-osx.sh  post-install-script-win.cmd  unix_shared.sh  win_build_obs.py  win_shared.py
CI/grpc/: googleapis_CMakeLists.txt  install-script-osx.sh  install-script-win.cmd  linux-install-script.sh  linux_install_script.sh  osx-install-script.sh  osx_install_script.sh  post-install-script-osx.sh  post-install-script-win.cmd  win-install-script.cmd  win_install_script.py
CI/http/: clone_plibsys.cmd  clone_plibsys.sh  linux-install-script.sh  linux_install_script.sh  osx-install-script.sh  osx_install_script.sh  win-install-script.cmd  win-install-script.py  win_install_script.py
CI/release_files/linux/: Readme.md
lib/: CMakeLists.txt
lib/caption_stream/: CMakeLists.txt  CaptionResult.h  CaptionResultHandler.cpp  CaptionResultHandler.h  CaptionStream.cpp  CaptionStream.h  ContinuousCaptions.cpp  ContinuousCaptions.h  TcpConnection.cpp  TcpConnection.h  ThreadsaferCallback.h  utils.h
lib/caption_stream/speech_apis/google_http_older/: CMakeLists.txt  CaptionStream.cpp  CaptionStream.h  TcpConnection.cpp  TcpConnection.h  ip_utils.c  log.h
lib/caption_stream/speech_apis/grpc_speech_api/: CMakeLists.txt  CaptionStream.cpp  CaptionStream.h
lib/caption_stream/speech_apis/grpc_speech_api/certs/: bin2h.cmake  roots.h
src/: AudioCaptureSession.cpp  AudioCaptureSession.h  CaptionPluginManager.cpp  CaptionPluginManager.h  CaptionPluginSettings.h  CaptionResultHandler.cpp  CaptionResultHandler.h  OutputAudioCaptureSession.cpp  OutputAudioCaptureSession.h  SourceAudioCaptureSession.cpp  SourceAudioCaptureSession.h  SourceCaptioner.cpp  SourceCaptioner.h  WordReplacer.h  caption_output_writer.h  caption_stream_helper.cpp  caption_transcript_writer.h  data.h  google_s2t_caption_plugin.cpp  log.c  storage_utils.h  stringutils.h
src/resources/: obs.qrc
src/ui/: CaptionDock.cpp  CaptionDock.h  CaptionDock.ui  CaptionSettingsWidget.cpp  CaptionSettingsWidget.h  CaptionSettingsWidget.ui  MainCaptionWidget.cpp  MainCaptionWidget.h  MainCaptionWidget.ui  OpenCaptionSettingsWidget.cpp  OpenCaptionSettingsWidget.h  OpenCaptionSettingsWidget.ui  uiutils.h
